--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "dependencies": {
     "json-2-csv": "^3.14.1",
     "modern-random-ua": "^1.0.3",
-    "puppeteer": "^5.5.0",
-    "puppeteer-extra": "^3.1.18",
-    "puppeteer-extra-plugin-adblocker": "^2.11.11",
-    "puppeteer-extra-plugin-stealth": "^2.7.8"
+    "puppeteer": "^5.5.0"
   },
   "devDependencies": {},
   "scripts": {
